- Fixed a bug with deleting videos.
- Fixed accessibility labels throughout the app.
- Added the ability to provide feedback within the app settings.

If you find the app useful, please rate it or leave a review. 